tests/fixtures/pass/annotation-const.php
<?php

declare(strict_types=1);

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

/**
 * @Bar(\winwin\winner\fixtures\Foo::NAME)
 */
class Foo
{
}
