tests/fixtures/fail/annotation-value-class-not-found.php
<?php

declare(strict_types=1);

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

/**
 * @Bar(Fo::class)
 */
class Foo
{
}
